2007-02-15  Peter Williams  <peter@newton.cx>

	* omega/images.py: A couple of painters for prerendered images; this
	seems to be the best-possible way to import LaTeX output, unfortunately.

	* omega/Makefile.am (mypy_PYTHON): Add images.py.

	* omega/__init__.py: Import the new images module and compactify the
	imports a bit.

	* latexsnippet/latexsnippet.py (RendererConfig.pngflags): Tweak to make
	things look better on my machine. Woohoo!

	* demo/stamps.py: Renamed from stampDemo ; down with redundancy.
	
	* demo/image.py: Quick test of LaTeX image painters.

	* demo/Makefile.am: Update this.

2007-02-15  Peter Williams  <peter@newton.cx>

	* latexsnippet/latexsnippet.py: New useful module, generates PNG files
	from LaTeX snippets. Lots and lots of docstrings. Based off of 
	htmlatex from http://www.meangrape.com/htmlatex/, although honestly it
	is pretty vastly modified from that.

	* demo/stampDemo.py (StampPainter.doPaint): Oops forgot to fix this to 
	new old stamp API.

	* latexsnippet/Makefile.am: Support file.
	* Makefile.am: Support changes.
	* configure.ac: Support changes.

2007-02-15  Peter Williams  <peter@newton.cx>

	* omega/base.py (LinearAxis.__init__): Have the min and max be defaulted
	arguments.
	(RectField): New class that puts all the xaxis/yaxis and transformation
	stuff in one place. Also does the X/Y -> position mapping in specs, data,
	and chunks.
	(RectPlot.__init__): Have a defaultField instead of defaultXAxis and
	defaultYAxis.
	(RectPlot.magicAxisPainters): Adapt to RectField and clarify a bit.
	(FieldPainter.__init__): New class, stores a RectField and does a few
	useful things like emulating another FieldPainter on init.
	(RectDataPainter.__init__): Inherit from FieldPainter now.
	(RectDataPainter.doChunkPaint): Use the RectField to transform the data
	all at once. Makes the code a lot clearer now.
	(BandPainter.__init__): As above. Goodbye redundancy!
	(DiscreteHistogramPainter.__init__): As above.