@@ -1,3 +1,13 @@
+2007-02-18  Peter Williams  <peter@newton.cx>
+
+	* latexsnippet/latexsnippet.py (RenderConfig): Add a 'noinput' option
+	that is given to LaTeX to make it not hang trying to read from stdin.
+	(renderSnippets): Use it here. LaTeX was hanging on a system without
+	the 'preview' package because it asks the user to type in a new name.
+
+	* configure.ac: Add checks for latex, dvipng, and the preview 
+	LaTeX package. Would have prevented the above issue.
+
 2007-02-15  Peter Williams  <peter@newton.cx>
 
 	* omega/images.py: A couple of painters for prerendered images; this
